--- a/.env
+++ b/.env
@@ -49,7 +49,7 @@ ADMIN_SECRET=6e457d4ac45f4e78b
 
 
 # DB_USER=root
-# DB_PASSWORD=root123
+# DB_PASSWORD=Abhishek@mrr2
 # DB_NAME=payroll_1
 # DB_HOST=127.0.0.1
 # ACCESS_TOKEN_SECRET='aFj98&yT@ZpL#Xq!Wm3tGh^KsV6PbRzNdUc4YxO2v7JW9kQn$ErTfMG!Xh8Lp2'
